syntax = "proto3";

package product;

service ProductService {
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc GetProducts(Empty) returns (GetProductsResponse);
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string price = 5;
}

message Empty {}

message GetProductsResponse {
    repeated GetProductResponse products = 1;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    string price = 3;
}

message CreateProductResponse {
    string id = 1;
}